# token-fence

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  spec.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.opencode/: package-lock.json  package.json
.opencode/plugins/: shell-guard.js
tools/: README.md  build_shell_dataset.py  collect_opencode_cli.py  pyproject.toml  shell_features.py  train_shell_model.py
