[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "casifier-tools"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scikit-learn",
  "skl2onnx",
  "onnx",
  "onnxruntime",
]

[project.scripts]
casifier-collect = "collect_opencode_cli:main"
casifier-build-dataset = "build_shell_dataset:main"
casifier-train-shell-model = "train_shell_model:main"

[tool.setuptools]
py-modules = ["collect_opencode_cli", "build_shell_dataset", "train_shell_model"]
